--- a/src/lib/cssModule/businessCardSlide.module.scss
+++ b/src/lib/cssModule/businessCardSlide.module.scss
@@ -43,10 +43,12 @@
     max-height: 160px;
   }
   .personImage {
-    object-fit: cover;
-    border: 1px solid whitesmoke;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
+    img {
+      border: 1px solid whitesmoke;
+      object-fit: cover;
+      width: 100px;
+      height: 100px;
+      border-radius: 50px;
+    }
   }
 }
