fix: fix bug websocket and crop

--- a/src/lib/cssModule/BusinessCard.module.scss
+++ b/src/lib/cssModule/BusinessCard.module.scss
@@ -18,6 +18,8 @@
   width: 100%;
   overflow: hidden;
   color: #444444;
+  white-space: break-spaces;
+  // white-space: pre-wrap;
 }
 
 .cardWork {
